20071221 TAG: fuse-utils_0_9_0pre1 (from fuse-utils_0_9_0-branch).
20071221 man/tape2wav.1: fix whitespace (Stuart).
20080104 ChangeLog,README,man/{audio2tape.1,createhdf.1,fuse-utils.1,
	 listbasic.1,profile2map.1,raw2hdf.1,rzxcheck.1,rzxdump.1,rzxtool.1,
	 scl2trd.1,snap2tzx.1,snapconv.1,tape2wav.1,tapeconv.1,tzxlist.1}:
	 update dates (fuse-utils_0_9_0-branch) (Stuart).
20080105 Makefile.am: distribute compat.h (thanks, make distcheck)
	 (fuse-utils_0_9_0-branch).
20080105 TAG: fuse-utils_0_9_0
20080107 Merge fuse-utils_0_9_0-branch changes r3451:3480 to trunk.
20080108 man/Makefile.am: install tape2wav.1 (Stuart).
20080306 .: ignore profile2map.
20080330 tape2wav.c: round up when quantising a pulse to a sample rate
         (fixes bug #1922528) (Fred).
20080331 snap2tzx.c: add 100ms pause between blocks to ensure there is a
         decent gap between edges in adjacent blocks (fixes bug #1929571)
         (Fred).
20080512 tapeconv.c,man/tapeconv.1: add options for updating archive info
         blocks, embedding loading screen and cassette inlays during
         conversion (Fred).
20080512 tape2wav.c: add help text for rate option (Fred).
20080614 configure.in: add --without-audiofile (patch #1982487)
         (José Manuel Ferrer Ortiz).
20080630 audio2tape.c,listbasic.c,rzxcheck.c,rzxtool.c,snap2tzx.c,snapconv.c,
	 tape2wav.c,tapeconv.c,tzxlist.c,utils.c: handle new allocator returns
	 object style API from libspectrum.
20080701 audio2tape.c,snap2tzx.c,tapeconv.c: handle new void return values
         tape API from libspectrum (Fred).
20080922 Makefile.am,audio2tape.[c|cc|h],configure.in,
         converter/{findpilot.[cc|h],findsync1.[cc|h],getpulse1.[cc|h],
         getpulse2.[cc|h],getsync2.[cc|h],romloader.[cc|h],romloaderstate.h},
         importer/{interpolator.h,schmitt.h,simple.h,soundfile.[cc|h],
         trigger.[cc|h]},man/audio2tape.1: add facility to recognise ROM blocks
         when processing audio file (Fred).